changed site title

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-wordpress",
-  "description": "Gatsby v2 starter for WordPress",
+  "name": "hello-japanese",
+  "description": "hello-japanese",
   "version": "0.1.0",
   "author": "GatsbyCentral.com",
   "dependencies": {
