--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma": "^0.7.5",
     "gatsby": "^2.18.1",
     "gatsby-awesome-pagination": "^0.3.3",
+    "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-lodash": "^3.1.7",
     "gatsby-plugin-netlify": "^2.1.12",
     "gatsby-plugin-purgecss": "^4.0.1",
